# flask-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  init.sh  pr-test.txt  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  test-production.yml
api-tests/Ffreedom-expenses/: Hello - Local.bru  bruno.json
features/: environment.py  hello.feature
features/steps/: hello_steps.py
ffreedom_expenses/: __init__.py  hello.py  wsgi.py
tests/: conftest.py  test_hello.py
